--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>UserDelete</servlet-name>
         <servlet-class>taw.servlet.UserDelete</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UserEdit</servlet-name>
+        <servlet-class>taw.servlet.UserEdit</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -31,6 +35,10 @@
     <servlet-mapping>
         <servlet-name>UserDelete</servlet-name>
         <url-pattern>/UserDelete</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserEdit</servlet-name>
+        <url-pattern>/UserEdit</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
